Fixxed issue where visual studio was not properly building the solution files. Needed to run VS as admin.

--- a/Welcome_screen/Welcome_screen/Welcome_screen.csproj
+++ b/Welcome_screen/Welcome_screen/Welcome_screen.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EC875702-E7F6-4C86-B3FF-02710D7E56F9}</ProjectGuid>
+    <ProjectGuid>{6EBBE78A-6A0D-4784-8F09-B751A58C769C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>Welcome_screen</RootNamespace>
+    <AssemblyName>Welcome_screen</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
